--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
   },
   "homepage": "https://github.com/jimkang/brush-viewfinder",
   "devDependencies": {
+    "d3": "^3.5.6",
     "tape": "^3.0.3"
   },
   "dependencies": {
+    "array-viewfinder": "^1.0.1",
     "browserify": "^8.1.3",
-    "d3": "^3.5.5",
+    "d3-arrays": "0.0.4",
+    "d3-random": "0.0.2",
+    "d3-scale": "^0.1.1",
+    "d3-selection": "^0.4.8",
     "idmaker": "^0.1.1",
     "lodash": "^3.6.0",
     "smash": "0.0.14",
