--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "d3-selection": "^0.4.8",
     "idmaker": "^0.1.1",
     "lodash": "^3.6.0",
+    "probable": "^1.7.0",
     "smash": "0.0.14",
     "uglify-js": "^2.4.17"
   }
