--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/jimkang/brush-viewfinder",
   "devDependencies": {
     "d3": "^3.5.6",
+    "immutable": "^3.7.5",
     "tape": "^3.0.3"
   },
   "dependencies": {
     "array-viewfinder": "^1.2.1",
     "browserify": "^8.1.3",
+    "call-next-tick": "^1.1.2",
     "d3-random": "0.0.2",
     "d3-scale": "^0.1.1",
     "d3-selection": "^0.4.8",
